--- a/yt-web-client/.gitignore
+++ b/yt-web-client/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-/firebase/firebase.ts
+app/firebase
+app/firebase/firebase.ts
 
 # dependencies
 /node_modules
