--- a/yt-web-client/.gitignore
+++ b/yt-web-client/.gitignore
@@ -1,6 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-app/firebase
-app/firebase/firebase.ts
+app/firebase/config.ts
 
 # dependencies
 /node_modules
