--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
+    "admin": "^1.4.1",
     "express": "^4.18.2",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
